# task-manager

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: build.yml
backend/: README.md
backend/migrations/: env.py
backend/migrations/versions/: c65e3b600f8d_corrigindo_atributo_unique_da_coluna_.py
backend/src/: app.py  exceptions.py
backend/src/controllers/: __init__.py  _base.py  task.py  user.py
backend/src/database/: init_session.py  models.py
backend/src/routers/: __init__.py  login.py  tasks.py  users.py
backend/src/schemas/: __init__.py  task.py  user.py
backend/src/utils/: deps.py  exceptions.py  security.py  settings.py
backend/tests/: conftest.py  test_crud_task.py  test_crud_user.py  test_db.py  test_health_check.py  test_login_router.py  test_security.py  test_task_router.py  test_user_router.py
frontend/src/: app.py
frontend/src/components/input/: primary_input.py
frontend/src/components/submit/: primary_button.py
frontend/src/pages/: __init__.py  login_page.py  register_page.py
frontend/static/: App.css  FormPage.css  index.css
migrations/: env.py
migrations/versions/: 0106c8e0c992_criando_tabela_de_tasks.py  3cfe4a984f72_mapeando_parâmetros_das_colunas.py  e5b8be77f6c4_create_users_table.py
