[tool.poetry]
name = "task-manager"
version = "0.1.0"
description = ""
authors = ["RWallan <3am.richardwallan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
httpx = "^0.25.1"
pydantic = {extras = ["email"], version = "^2.5.1"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
taskipy = "^1.12.0"
black = "^23.11.0"
ruff = "^0.1.5"
isort = "^5.12.0"


[tool.poetry.group.backend.dependencies]
sqlalchemy = "^2.0.23"

[tool.ruff]
line-length = 79
exclude = [".venv", "migrations"]

[tool.black]
line-length = 79
extend-exclude = "(migrations/)"

[tool.isort]
line_length = 79
profile = "black"
extend_skip = ["migrations"]

[tool.pytest.ini_options]
pythonpath = "."

[tool.taskipy.tasks]
lint = "ruff . && black --check . --diff"
format = "black . && isort ."
backend = "uvicorn src.app:app --reload"
pre_test = "task lint"
test = "pytest -s -x -vv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
